--- a/week_8/package.json
+++ b/week_8/package.json
@@ -9,5 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.13.1"
+  "packageManager": "pnpm@10.13.1",
+  "dependencies": {
+    "axios": "^1.11.0",
+    "express": "^5.1.0",
+    "multer": "^2.0.2"
+  }
 }
